--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,8 +7,10 @@
 @use "./base/utilities";
 
 @use "./components/button";
+@use "./components/card";
 @use "./components/composition";
 @use "./components/feature-box";
+
 
 @use "./layout/grid";
 @use "./layout/header";
