--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -41,6 +41,15 @@
         }
     }
 
+    &--green {
+        background-color: v.$color-primary;
+        color: v.$color-white;
+
+        &::after {
+            background-color: v.$color-primary;
+        }
+    }
+
     &::after {
         content: "";
         display: inline-block;
