--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -30,11 +30,19 @@
         }
 
         &--back {
-            background-color: green;
+            background-color: v.$color-white;
             transform: rotateY(180deg);
 
             &-1 {
                 background-image: linear-gradient(to right bottom, v.$color-secondary-light, v.$color-secondary-dark);
+            }
+
+            &-2 {
+                background-image: linear-gradient(to right bottom, v.$color-primary-light, v.$color-primary-dark);
+            }
+
+            &-3 {
+                background-image: linear-gradient(to right bottom, v.$color-tertiary-light, v.$color-tertiary-dark);
             }
         }
     }
@@ -55,6 +63,8 @@
         background-blend-mode: screen;
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
 
 
         &--1 {
@@ -62,11 +72,11 @@
         }
 
         &--2 {
-            background-image: url(../img/nat-6.jpg);
+            background-image: linear-gradient(to right bottom, v.$color-primary-light, v.$color-primary-dark), url(../img/nat-6.jpg);
         }
 
         &--3 {
-            background-image: url(../img/nat-7.jpg);
+            background-image: linear-gradient(to right bottom, v.$color-tertiary-light, v.$color-tertiary-dark), url(../img/nat-7.jpg);
         }
     }
 
@@ -92,6 +102,18 @@
                     rgba(v.$color-secondary-light, .85),
                     rgba(v.$color-secondary-dark, .85));
         }
+
+        &--2 {
+            background-image: linear-gradient(to right bottom,
+                    rgba(v.$color-primary-light, .85),
+                    rgba(v.$color-primary-dark, .85));
+        }
+
+        &--3 {
+            background-image: linear-gradient(to right bottom,
+                    rgba(v.$color-tertiary-light, .85),
+                    rgba(v.$color-tertiary-dark, .85));
+        }
     }
 
     &__details {
@@ -112,5 +134,33 @@
                 }
             }
         }
+    }
+
+    // BACK SIDE STYLING
+
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        text-align: center;
+
+    }
+
+    &__price-box {
+        text-align: center;
+        color: v.$color-white;
+        margin-bottom: 8rem;
+    }
+
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+
+    &__price-value {
+        font-size: 6rem;
+        font-weight: 100;
     }
 }
