--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @use "./components/card";
 @use "./components/composition";
 @use "./components/feature-box";
+@use "./components/story";
 
 
 @use "./layout/grid";
