--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,22 @@ body {
   margin-top: 10rem;
 }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.15;
+  overflow: hidden;
+}
+.bg-video__content {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -507,6 +523,7 @@ body {
 
 .section-stories {
   padding: 15rem 0;
+  position: relative;
 }
 
 *,
