--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @use "./base/typography";
 @use "./base/utilities";
 
+@use "./components/bg-video";
 @use "./components/button";
 @use "./components/card";
 @use "./components/composition";
