Booking section done

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,7 +2,7 @@
 
 .btn {
 
-
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -13,6 +13,9 @@
         transition: all .2s;
         position: relative;
         font-size: v.$default-font-size;
+        border: none;
+        cursor: pointer;
+
 
     }
 
@@ -27,7 +30,9 @@
         }
     }
 
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba(v.$color-black, 0.2);
     }
