--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -50,6 +50,57 @@
         transform: translateY(-4rem);
     }
 
+    &__radio-group {
+        width: 49%;
+        display: inline-block;
+    }
+
+    &__radio-input {
+        display: none;
+    }
+
+    &__radio-label {
+        font-size: v.$default-font-size;
+        cursor: pointer;
+        position: relative;
+        padding-left: 4.5rem;
+
+
+
+
+    }
+
+    &__radio-button {
+        height: 3rem;
+        width: 3rem;
+        border: 5px solid v.$color-primary;
+        border-radius: 50%;
+        display: inline-block;
+        position: absolute;
+        left: 0;
+        top: -0.4rem;
+
+
+        &::after {
+            content: "";
+            display: block;
+            height: 1.3rem;
+            width: 1.3rem;
+            border-radius: 50%;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            background-color: v.$color-primary;
+            opacity: 0;
+            transition: opacity .2s;
+        }
+    }
+
+    &__radio-input:checked+&__radio-label &__radio-button::after {
+        opacity: 1;
+    }
+
 
 
 
