--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@
 @use "./components/form";
 @use "./components/story";
 
-
+@use "./layout/footer";
 @use "./layout/grid";
 @use "./layout/header";
 
