--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,7 +14,9 @@
         right: 6rem;
         border-radius: 50%;
         z-index: 2000;
-
+        box-shadow: 0 1rem 3rem rgba(v.$color-black, .1);
+        text-align: center;
+        cursor: pointer;
     }
 
     &__background {
@@ -25,20 +27,22 @@
         top: 6.5rem;
         right: 6.5rem;
         background-image: radial-gradient(v.$color-primary-light, v.$color-primary-dark);
-        transition: transform .8s;
         z-index: 1000;
+        transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
-        transform: scale(80);
-
+        //transform: scale(80);
     }
 
     &__nav {
         height: 100vh;
-        width: 100%;
         position: fixed;
         top: 0;
         left: 0;
         z-index: 1500;
+
+        opacity: 0;
+        width: 0;
+        transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
 
     &__list {
@@ -48,6 +52,7 @@
         transform: translate(-50%, -50%);
         list-style: none;
         text-align: center;
+        width: 100%;
     }
 
     &__item {
@@ -81,5 +86,70 @@
             color: v.$color-primary;
             transform: translateX(1rem);
         }
+    }
+
+
+    //FUNCTIONALITY
+    &__checkbox:checked~&__background {
+        transform: scale(80);
+    }
+
+    &__checkbox:checked~&__nav {
+        opacity: 1;
+        width: 100%;
+    }
+
+
+    //ICON
+    &__icon {
+        position: relative;
+        margin-top: 3.5rem;
+
+        &,
+        &::before,
+        &::after {
+            width: 3rem;
+            height: 2px;
+            background-color: v.$color-grey-dark-3;
+            display: inline-block;
+        }
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            transition: all .2s;
+        }
+
+        &::before {
+            top: -.8rem;
+        }
+
+        &::after {
+            top: .8rem;
+        }
+    }
+
+    &__button:hover &__icon::before {
+        top: -1rem;
+    }
+
+    &__button:hover &__icon::after {
+        top: 1rem;
+    }
+
+    &__checkbox:checked+&__button &__icon {
+        background-color: transparent;
+    }
+
+    &__checkbox:checked+&__button &__icon::before {
+        top: 0;
+        transform: rotate(135deg);
+    }
+
+    &__checkbox:checked+&__button &__icon::after {
+        top: 0;
+        transform: rotate(-135deg);
     }
 }
