--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -9,6 +9,11 @@
     top: 0;
     left: 0;
     z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+
+
 
     &__content {
         @include m.absCenter;
@@ -18,6 +23,9 @@
         border-radius: 3px;
         display: table;
         overflow: hidden;
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(.5);
+        transition: all .4s .2s;
 
 
     }
@@ -37,24 +45,6 @@
     &__img {
         display: block;
         width: 100%;
-    }
-
-    &__close {
-
-        &:link,
-        &:visited {
-            color: v.$color-grey-dark;
-            position: absolute;
-            top: 2.5rem;
-            right: 2.5rem;
-            font-size: 3rem;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        &:hover {
-            color: v.$color-primary;
-        }
     }
 
     &__text {
@@ -78,6 +68,39 @@
         hyphens: auto;
     }
 
+    //OPEN STATES
+
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+
+    &__close {
+
+        &:link,
+        &:visited {
+            color: v.$color-grey-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+            transition: all .2s;
+            line-height: 1;
+        }
+
+        &:hover {
+            color: v.$color-primary;
+        }
+
+    }
 
 
 }
